objects/UC_Document__c.object
<CustomObject>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Firm Offer Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Deal Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Role__c</fullName>
        <label>Opportunity Role</label>
        <referenceTo>Opportunity_Role__c</referenceTo>
        <relationshipLabel>U&amp;C Documents</relationshipLabel>
        <relationshipName>UC_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Required_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required for Approval?</label>
        <type>Checkbox</type>
    </fields>
    <label>U&amp;C Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>U&amp;C Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>